--- a/static/css/button_animation.css
+++ b/static/css/button_animation.css
@@ -1,7 +1,10 @@
 .button-frame {
-    --border: 5px;    /* the border width */
-    --slant: 0.7em;   /* control the slanted corners */
-    --color: #37E8FC; /* the color */
+    --border: 5px;
+    /* the border width */
+    --slant: 0.7em;
+    /* control the slanted corners */
+    --color: #37E8FC;
+    /* the color */
 
     user-select: none;
     font-size: 35px;
@@ -10,36 +13,38 @@
     border: none;
     font-weight: bold;
     color: var(--color);
-    background: 
-    linear-gradient(to bottom left,var(--color)  50%,#0000 50.1%) top right,
-    linear-gradient(to top   right,var(--color)  50%,#0000 50.1%) bottom left;
+    background:
+        linear-gradient(to bottom left, var(--color) 50%, #0000 50.1%) top right,
+        linear-gradient(to top right, var(--color) 50%, #0000 50.1%) bottom left;
     background-size: calc(var(--slant) + 1.3*var(--border)) calc(var(--slant) + 1.3*var(--border));
     background-repeat: no-repeat;
     box-shadow:
-    0 0 0 200px inset var(--s,#0000),
-    0 0 0 var(--border) inset var(--color);
-    clip-path: 
+        0 0 0 200px inset var(--s, #0000),
+        0 0 0 var(--border) inset var(--color);
+    clip-path:
         polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant),
-                100% 100%, var(--slant) 100%,0 calc(100% - var(--slant))
-            );
+            100% 100%, var(--slant) 100%, 0 calc(100% - var(--slant)));
 }
 
 .button-anime {
-    transition: color var(--t,0.3s), background-size 0.3s;
+    transition: color var(--t, 0.3s), background-size 0.3s;
     cursor: pointer;
 }
+
 .button-anime:focus-visible {
-    outline-offset: calc(-1*var(--border));
-    outline: var(--border) solid #000c;
+    lectureNote-offset: calc(-1*var(--border));
+    lectureNote: var(--border) solid #000c;
     clip-path: none;
     background-size: 0 0;
 }
+
 .button-anime:hover,
-.button-anime:active{
+.button-anime:active {
     background-size: 100% 100%;
     color: #fff;
     --t: 0.2s 0.1s;
 }
+
 .button-anime:active {
     --s: #0005;
     transition: none;
