--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,7 +14,7 @@
     align-items: center;
 }
 
-.role-selection > div {
+.role-selection>div {
     margin: 20px;
     width: 100%;
 }
@@ -41,7 +41,7 @@
     flex-direction: column;
 }
 
-.input-frame > :first-child {
+.input-frame> :first-child {
     flex: 7;
     display: flex;
     flex-direction: column;
@@ -49,18 +49,23 @@
     justify-content: space-evenly;
 }
 
-.input-frame > :last-child {
+.input-frame> :last-child {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    align-items: center;
 }
 
 .login-frame {
     /* width: 80%;
     height: 10%; */
-    height: 50%;
+    /* height: 50%; */
     width: 100%;
     background-color: transparent;
+}
+
+.login-frame:focus {
+    outline: none;
 }
 
 .forget-password {
@@ -82,7 +87,7 @@
     font-size: 30px;
 }
 
-.input-box > label {
+.input-box>label {
     position: absolute;
     width: 100%;
     transition: all 0.4s ease;
