--- a/static/css/teacher.css
+++ b/static/css/teacher.css
@@ -1,5 +1,7 @@
-@keyframes typing{
-  from { width: 0; }
+@keyframes typing {
+  from {
+      width: 0;
+  }
 }
 
 .title {
@@ -17,25 +19,27 @@
   font-size: 30px;
   color: white;
   margin: 0;
-  overflow: hidden; /*はみ出た要素を非表示に*/
-  white-space: nowrap; /*1行に*/
+  overflow: hidden;
+  /*はみ出た要素を非表示に*/
+  white-space: nowrap;
+  /*1行に*/
   animation: typing 1s steps(19);
   font-weight: bolder;
-  text-shadow: 8px 6px 2px  rgb(0, 0, 0);
+  text-shadow: 8px 6px 2px rgb(0, 0, 0);
 }
 
 .create-course {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-color: #00000073;
-    z-index: 6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  /* background-color: #00000073; */
+  z-index: 6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.toggler:checked ~ .mask {
+.toggler:checked~.mask {
   display: block;
 }
 
@@ -45,34 +49,34 @@
   display: none;
   position: fixed;
   top: 0;
-  z-index: 3;
+  z-index: 8;
 }
 
 .data-frame {
-    width: 100%;
-    height: 90%;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 90%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
 .data-input-frame {
-    width: 80%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    border: 5px solid rgb(79, 130, 240);
-    border-radius: 10px;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  border: 5px solid rgb(79, 130, 240);
+  border-radius: 10px;
 }
 
 .data {
-    width: 80%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 1;
+  width: 80%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
 }
 
 /* #s1 {
@@ -82,93 +86,95 @@
 } */
 
 .sel_box {
-    display: flex;
-    width: 500px;
-    height: 30px;
-    border-radius: 10px;
-    border: solid 1px;
-    border-color: rgba(0, 0, 0, 0.342);
-    text-align: center;
-    text-align-last: center;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 500px;
+  height: 30px;
+  border-radius: 10px;
+  border: solid 1px;
+  border-color: rgba(0, 0, 0, 0.342);
+  text-align: center;
+  text-align-last: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .sel_box:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.sel_box:focus {
-    outline: none;
-}
+/* .sel_box:focus {
+  lectureNote: none;
+} */
 
 /* 第一個與.sel_box同層的.content_box元素 */
-.sel_box ~ .content_box {
-    display: none;
+.sel_box~.content_box {
+  display: none;
 }
 
-.sel_box + .content_box {
-    display: block;
+.sel_box+.content_box {
+  display: block;
 }
 
 
 .content_box {
-    border: solid 5px;
-    border-color: rgba(47, 109, 235, 0.781);
-    border-radius: 10px;
-    position: relative;
-    margin-top: 10px;
-    width: 500px;
-    height: 60%;
+  border: solid 5px;
+  border-color: rgba(47, 109, 235, 0.781);
+  border-radius: 10px;
+  position: relative;
+  margin-top: 10px;
+  width: 500px;
+  height: 60%;
 }
 
 .content_box:hover {
-    cursor: pointer;
-    border-color: rgba(47, 235, 113, 0.781);
+  cursor: pointer;
+  border-color: rgba(47, 235, 113, 0.781);
 }
 
 .custom_file_input {
-    /* position: absolute; */
-    /* top: 0;
+  /* position: absolute; */
+  /* top: 0;
     left: 0; */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
+
 .custom_file_input span {
   margin-top: 15px;
   font-size: 30px;
   color: rgb(197, 190, 190);
 
 }
+
 .url_input_box {
-    height: 10%;
-    display: flex;
-    align-items: center;
+  height: 10%;
+  display: flex;
+  align-items: center;
 }
 
 .url_box {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .url_box>input {
-    padding: 0;
-    border: none;
-    margin: 0 10px;
-    height: 80%;
-    width: 100%;
-    background-color: transparent;
-    color: rgb(17, 222, 245);
-    /* caret-color: red; */
+  padding: 0;
+  border: none;
+  margin: 0 10px;
+  height: 80%;
+  width: 100%;
+  background-color: transparent;
+  color: rgb(17, 222, 245);
+  /* caret-color: red; */
 }
 
 /* form > ul {
@@ -187,17 +193,21 @@
 .middle input[type=radio] {
   display: none;
 }
-.middle input[type=radio]:checked + .radio-box {
+
+.middle input[type=radio]:checked+.radio-box {
   background-color: #007e90;
 }
-.middle input[type=radio]:checked + .radio-box span {
+
+.middle input[type=radio]:checked+.radio-box span {
   color: white;
   transform: translateY(70px);
 }
-.middle input[type=radio]:checked + .radio-box span:before {
+
+.middle input[type=radio]:checked+.radio-box span:before {
   transform: translateY(0px);
   opacity: 1;
 }
+
 .middle .radio-box {
   width: 450px;
   height: 250px;
@@ -210,9 +220,11 @@
   position: relative;
   font-weight: 900;
 }
+
 .middle .radio-box:active {
   transform: translateY(10px);
 }
+
 .middle .radio-box span {
   position: absolute;
   transform: translate(0, 60px);
@@ -223,6 +235,7 @@
   user-select: none;
   color: #007e90;
 }
+
 .middle .radio-box span:before {
   font-size: 1.2em;
   font-family: FontAwesome;
@@ -233,12 +246,15 @@
   font-weight: normal;
   color: white;
 }
-.middle .outline span:before {
+
+.middle .lectureNote span:before {
   content: "✔️";
 }
+
 .middle .speech span:before {
   content: "✔️";
 }
+
 .fa-upload {
   font-size: 100px;
   color: rgb(197, 190, 190);
@@ -261,7 +277,7 @@
 }
 
 .textbox:focus {
-  outline: none;
+  /* lectureNote: none; */
   border: 5px solid #007e90;
 }
 
@@ -274,7 +290,29 @@
 }
 
 
-.content_box img {
+/* .content_box img {
   width: 100%;
   height: 100%;
+} */
+
+
+.face_img_frame {
+  /* display: flex; */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  overflow: auto;
+  width: 80%;
+}
+
+.face_img {
+  border: 5px solid #007d90;
+  border-radius: 15rem;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+}
+
+.face_img:hover {
+  border: 5px solid #7802ff;
 }
