--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
+    <title>AIGC Teacher Master</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
@@ -23,12 +23,17 @@
 </head>
 <body>
     {% block content %}
+    <div class="title">
+        <p class="AIGC-title">AIGC Teacher Master</p>
+    </div>
     <div class="center">
         <div class="role-selection">
             <div id="teacher-button" class="button-frame button-anime">
-                <span>Teacher</span>
+                <span >Teacher</span>
             </div>
-            <div id="student-button" class="button-frame button-anime"><span>Student</span></div>
+            <div id="student-button" class="button-frame button-anime">
+                <span>Student</span>
+            </div>
         </div>
     </div>
     {% endblock %}
