--- a/static/css/hamburger.css
+++ b/static/css/hamburger.css
@@ -88,7 +88,8 @@
     transform: translateX(-200%);
     background-color: #091d387d;
     z-index: 10;
-    position: relative;
+    /* position: relative; */
+    position: absolute;
 
     /* APPLYING TRANSITION TO THE MENU :  */
 
@@ -169,4 +170,5 @@
 
 .toggler:checked~.bg {
     opacity: 1;
+    z-index: 7;
 }
