--- a/static/css/teacher.css
+++ b/static/css/teacher.css
@@ -291,6 +291,7 @@
 .textbox:focus {
   /* lectureNote: none; */
   border: 5px solid #007e90;
+  outline: none;
 }
 
 .send {
@@ -342,4 +343,122 @@
 
 .face_img_frame input[type=radio]:checked+.face_img {
   border: 5px solid #ff0202;
+}
+
+#jstree-root {
+  top: 80px;
+  position: absolute;
+  transform: translateX(-200%);
+  transition: all 0.4s ease;
+  max-width: 100%;
+  overflow: auto;
+  max-height: calc(100vh - 81px);
+  height: calc(100vh - 121px);
+  padding-bottom: 40px;
+}
+
+.toggler:checked~.menu #jstree-root {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+
+.func-button {
+  position: absolute;
+  right: 5px;
+  top: 28px;
+}
+
+.f-button {
+  font-size: 15px;
+}
+
+.create-course-button {
+  position: fixed;
+  height: 5%;
+  bottom: 20px;
+  right: 19px;
+  width: 10%;
+}
+
+.create-course-mask {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  background-color: #0c2c30cc;
+}
+
+.code-create {
+  height: 30%;
+  width: 30%;
+}
+
+.code-create label {
+  z-index: 1;
+  user-select: all;
+}
+
+#code-copy {
+  width: 100%;
+  transition: color var(--t, 0.3s), background-size 0.3s, width .5s;
+}
+
+#code-copy * {
+  transition: all .25s;
+}
+
+#code-copy i {
+  transform: translate(-50%, -250%);
+  position: absolute;
+  left: 50%;
+}
+
+#code-copy:focus {
+  width: 30px;
+  background: #44c08a;
+  border-radius: 70%;
+  clip-path: circle(100%);
+}
+
+#code-copy:focus i {
+  transform: translate(-50%, -100%);
+}
+
+#code-copy:focus div {
+  opacity: 0;
+}
+
+.list {
+  color: #50dfff;
+}
+
+.jstree-rename-input {
+  height: auto !important;
+  line-height: 0 !important;
+  padding: 1 !important;
+}
+
+.jstree-rename-input:focus {
+  outline: none;
+  border: none;
+  background: transparent;
+  color: #50dfff;
+}
+
+.jstree-clicked {
+  background: #226786 !important;
+  border-radius: 7px !important;
+}
+
+.jstree-hovered { 
+  background: #291fe2 !important;
+  border-radius: 7px !important;
+}
+
+.vakata-context {
+  z-index: 9999;
 }
