--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -4,6 +4,8 @@
 {% endblock %}
 {% block link %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -14,9 +16,35 @@
     <input type="checkbox" class="toggler">
     <div class="hamburger"><div></div></div>
     <div class="menu">
-        <div class="non-data">
+        <!-- <div class="non-data">
             <p>+</p>
             <p>New Course</p>
+        </div> -->
+        <div class="jstree-data">
+            <div class="func-button">
+                <button class="button-frame button-anime f-button" value="create_folder" onclick="create('folder');">
+                    <i class="fa-regular fa-folder"></i>
+                </button>
+                <button class="button-frame button-anime f-button" value="create_file" onclick="create('file');">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+                <button class="button-frame button-anime f-button" value="rename" onclick="rename();">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="button-frame button-anime f-button" value="del" onclick="del();">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+                <button class="button-frame button-anime f-button" value="up" onclick="moveup();">
+                    <i class="fa-solid fa-angle-up"></i>
+                </button>
+                <button class="button-frame button-anime f-button" value="down" onclick="movedown();">
+                    <i class="fa-solid fa-angle-down"></i>
+                </button>
+            </div>
+            <div id="jstree-root" class="list"></div>
+            <button class="button-frame button-anime f-button create-course-button" value="create_course" onclick="create_course()">
+                <i class="fa-solid fa-file-circle-plus"></i>
+            </button>
         </div>
     </div>
     <div class="bg"></div>
@@ -24,7 +52,7 @@
 </header>
 
 <div class="data-frame">
-    <div class="data-input-frame">
+    <div class="data-input-frame" style="transform: translateY(-1000px);">
         <div id="timeline">
             <ul id="dates">
                 <li><a href="#step-1">Step.1</a></li>
@@ -35,8 +63,9 @@
             </ul>
             <form method="POST" name="uploaddata" id="dataForm">
                 <!-- <area value="subject_naem"> -->
-                <input name="chapter_name" value="test_chapter_name" style="display:none">
-                <input name="subject_name" value="test_subject_name" style="display:none">
+                <input name="chapter_name" value="" style="display:none">
+                <input name="subject_name" value="" style="display:none">
+                <input name="file_name" value="" style="display:none">
                 <input name="author" value="author" style="display:none">
                 <ul id="issues">
                     <li id="step-1">
@@ -59,6 +88,7 @@
                                     <input type="text" id="url_input" placeholder="Enter URL">
                                 </div>
                             </div>
+                            <a href="#" id="view_file" class="button-frame button-anime" target="_blank" style="margin-top: 15px;">file check</a>
                         </div>
                     </li>
                     <li id="step-2">
@@ -90,7 +120,7 @@
                     <li id="step-3">
                         <div class="data">
                             <p>Select language/voice</p>
-                            <select name="language_box">
+                            <select name="language_box" class="sel_box">
                                 {% for voice in voices %}
                                     <option value="{{ voice }}">{{ voice }}</option>
                                 {% endfor %}
@@ -135,7 +165,7 @@
             </div>
         </div>
     </div>
-    <div class="create-course" style="transform: translateY(1000px);">
+    <div class="create-course">
         <div class="button-frame role-open role-selection">
             <!-- <a href="/teacher"> -->
                 <button title="create_course" class="button-frame button-anime return-button">
@@ -157,6 +187,29 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="create-course-mask">
+            <div class="button-frame role-open role-selection code-create">
+                <button title="close-code" class="button-frame button-anime return-button">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+                <span>課程代碼</span>
+                <div class="input-frame">
+                    <div>
+                        <div class="input-box">
+                            <label id="code">course name</label>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="register-button-frame">
+                            <button type="button" class="button-frame button-anime" id="code-copy" onclick="code_copy()">
+                                <div>COPY</div>
+                                <i class="fa-solid fa-check"></i>
+                            </button>     
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
     </div>
 </div>
 
