--- a/static/css/student.css
+++ b/static/css/student.css
@@ -1,83 +1,87 @@
-#test_test{
+#chat_bot_button {
   display: flex;
-  
-}
-
-/* 
-.download_button {
-  background: #ffffff;
-  border: solid 1px #e6e6e6;
-  border-radius: 2px;
-  display: inline-block;
-  height: 100px;
-  line-height: 100px;
-  margin: 5px;
-  position: relative;
-  text-align: center;
-  vertical-align: middle;
-  width: 100px;
-}
-
-.download_button span {
-  background: #f2594b;
-  border-radius: 4px;
-  color: #ffffff;
-  display: inline-block;
-  font-size: 11px;
-  font-weight: 700;
-  line-height: normal;
-  padding: 5px 10px;
-  position: relative;
-  text-transform: uppercase;
-  z-index: 1;
-}
-
-.download_button span:last-child {
-  margin-left: -20px;
-}
-
-.download_button:before,
-.download_button:after {
-  background: #ffffff;
-  border: solid 3px #9fb4cc;
-  border-radius: 4px;
-  content: '';
-  display: block;
-  height: 35px;
-  left: 50%;
-  margin: -17px 0 0 -12px;
   position: absolute;
-  top: 50%;  
-  width: 25px;
+  top: 0;
+  right: 0;
+  z-index: 11;  
+  height: 80px;
+  align-items: center;
+}
+.course-material-frame {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
 }
 
-.download_button:hover:before,
-.download_button:hover:after {
-  background: #e2e8f0;
+.course-material {
+  /* margin: -5% 0 0 0; */
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  border: 5px solid rgb(79, 130, 240);
+  border-radius: 10px;
+  transition: all 0.5s ease;
+}
+#course-frame-left {
+  margin: -5% 10px 0 20px;
+}
+#course-frame-right {
+  margin: -5% 20px 0 10px;
 }
 
-.download_button:before {
-  margin: -23px 0 0 -5px;
+/* button */
+.cta {
+  border: none;
+  background: none;
 }
 
-.download_button:hover {
-  background: #e2e8f0;
-  border-color: #6fb9cc;
+.cta span {
+  padding-bottom: 7px;
+  letter-spacing: 4px;
+  font-size: 20px;
+  padding-right: 15px;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: 8px 6px 2px rgb(0,0,0);
 }
 
-.download_button:active {
-  background: #bdd0e7;
-  box-shadow: inset 0 2px 2px rgba(0, 0, 0, .25);
+.cta svg {
+  transform: translateX(-8px);
+  transition: all 0.3s ease;
 }
 
-.download_button span:first-child {
-  display: none;
+.cta:hover svg {
+  transform: translateX(0);
 }
 
-.download_button:hover span:first-child {
-  display: inline-block;
+.cta:active svg {
+  transform: scale(0.9);
 }
 
-.download_button:hover span:last-child {
-  display: none;
-} */
+.hover-underline-animation {
+  position: relative;
+  color: black;
+  padding-bottom: 20px;
+}
+
+.hover-underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.cta:hover .hover-underline-animation:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
