--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,3 +46,9 @@ header {
   height: 10%;
   /* top: 0; */
 }
+
+/* input:-webkit-autofill{
+  border: 1px solid green;
+  -webkit-text-fill-color: green;
+  transition: background-color 5000s ease-in-out 0s;
+} */
