--- a/static/css/teacher.css
+++ b/static/css/teacher.css
@@ -28,6 +28,29 @@
   text-shadow: 8px 6px 2px rgb(0, 0, 0);
 }
 
+.course {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  color: #37E8FC;
+  font-weight: bold;
+}
+
+.course > p {
+  margin: 0;
+}
+
+.course-title {
+  width: 178.4px;
+  overflow: hidden;
+  /*はみ出た要素を非表示に*/
+  white-space: nowrap;
+  /*1行に*/
+  animation: typing 1s steps(8);
+  font-weight: bolder;
+  text-align: center;
+}
+
 .create-course {
   position: fixed;
   height: 100%;
@@ -53,24 +76,25 @@
   z-index: 8;
 }
 
-.data-frame {
-  width: 100%;
-  height: 90%;
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: center;
-}
+  .data-frame {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+  }
 
-.data-input-frame {
-  width: 80%;
-  height: 80%;
-  display: flex;
-  justify-content: center;
-  border: 5px solid rgb(79, 130, 240);
-  border-radius: 10px;
-  transition: all 0.5s ease;
-}
+  .data-input-frame {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    border: 5px solid rgb(79, 130, 240);
+    border-radius: 10px;
+    transition: all 0.5s ease;
+    margin-top: -5%;
+  }
 
 .data {
   width: 80%;
@@ -276,8 +300,8 @@
   width: 100%;
   height: 70%;
   padding: 8px 10px;
-  border: 1px solid #82aed4;
-  border-radius: 25px;
+  border: 5px solid #82aed4;
+  border-radius: 25px 0px 0px 25px;
   color: #352b2b;
   font-size: 1em;
   line-height: 1.5;
@@ -463,3 +487,4 @@
 .vakata-context {
   z-index: 9999;
 }
+
