--- a/templates/student.html
+++ b/templates/student.html
@@ -1,49 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    {% for file in css_files %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/' + file) }}">
-    {% endfor %}
-    {% for file in js_files %}
-        <script src="{{ url_for('static', filename='js/' + file) }}" ></script>
-    {% endfor %}
+{% extends 'index.html' %}
+
+{% block preload %}
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-</head>
-<body>
-    <div class="fish" id="fish"></div>
+{% endblock %}
+
+{% block content %}
+
+<div class="fish" id="fish"></div>
     <div class="fish" id="fish2"></div>
     <div class="plants"></div>
-    <header>
-
-        {% block content %}{% endblock %} 
-        <div class="title">
-            <p class="AIGC-title">AIGC Teacher Master</p>
-        </div>
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-            <div class="jstree-data">
-            
-            </div>
-        </div>
-        <button class="button-frame button-anime" id="test_test">chatBOT</button>
-        <div class="bg"></div>
-        <div class="mask"></div>
-    </header>
-    <div class="data-frame">
-        <div class="data-input-frame">
-            <!-- <div>
-                <a href="#" download class="download_button"><span>Download</span><span>PDF</span></a>
-            </div>  -->
-        </div>
-        <div class="data-input-frame">
-            <!-- <div>
-                <a href="#" download class="download_button"><span>Download</span><span>VIDEO</span></a>
-            </div> -->
+<header>
+    <div class="title">
+        <p class="AIGC-title">AIGC Teacher Master</p>
+    </div>
+    <input type="checkbox" class="toggler">
+    <div class="hamburger"><div></div></div>
+    <div class="menu">
+        <div class="jstree-data">
+        
         </div>
     </div>
-    </body>
-</html>
+    <div id="chat_bot_button">
+        <a href="/chatbot">
+            <button class="cta">
+                <span class="hover-underline-animation"> chatBOT </span>
+                <svg viewBox="0 0 46 16" height="10" width="30" xmlns="http://www.w3.org/2000/svg" id="arrow-horizontal">
+                    <path transform="translate(30)" d="M8,0,6.545,1.455l5.506,5.506H-30V9.039H12.052L6.545,14.545,8,16l8-8Z" data-name="Path 10" id="Path_10"></path>
+                </svg>
+            </button>
+        </a>
+    </div>
+    <div class="bg"></div>
+    <div class="mask"></div>
+</header>
+
+<div class="course-material-frame">
+    <div class="course-material" id="course-frame-left"></div>
+    <div class="course-material" id="course-frame-right"></div>
+</div>
+
+{% endblock %} 
