--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -28,9 +28,9 @@
                 <button class="button-frame button-anime f-button" value="create_file" onclick="create('file');">
                     <i class="fa-solid fa-plus"></i>
                 </button>
-                <button class="button-frame button-anime f-button" value="rename" onclick="rename();">
+                <!-- <button class="button-frame button-anime f-button" value="rename" onclick="rename();">
                     <i class="fa-solid fa-pen"></i>
-                </button>
+                </button> -->
                 <button class="button-frame button-anime f-button" value="del" onclick="del();">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
@@ -51,8 +51,12 @@
     <div class="mask"></div>
 </header>
 
+
+<div class="course">
+    <p class="course-title"></p>
+</div>
 <div class="data-frame">
-    <div class="data-input-frame" style="transform: translateY(-1000px);">
+    <div class="data-input-frame" style="transform: translateY(-2000px);">
         <div id="timeline">
             <ul id="dates">
                 <li><a href="#step-1">Step.1</a></li>
@@ -63,10 +67,10 @@
             </ul>
             <form method="POST" name="uploaddata" id="dataForm">
                 <!-- <area value="subject_naem"> -->
-                <input name="chapter_name" value="" style="display:none">
-                <input name="subject_name" value="subject_name" style="display:none">
-                <input name="file_name" value="" style="display:none">
-                <input name="author" value="author" style="display:none">
+                <input name="subject_name" value="" style="display:none;">
+                <input name="chapter_name" value="" style="display:none;">
+                <input name="file_name" value="" style="display: none;">
+                <input name="author" value="admin" style="display:none;">
                 <ul id="issues">
                     <li id="step-1">
                         <div class="data">
@@ -121,11 +125,12 @@
                     <li id="step-3">
                         <div class="data">
                             <p>Select language/voice</p>
-                            <select name="language_box" class="sel_box">
+                            <select name="language_box" class="sel_box" id="voices" onchange="playAudio()">
                                 {% for voice in voices %}
                                     <option value="{{ voice }}">{{ voice }}</option>
                                 {% endfor %}
                             </select>
+                            <audio id="audioPlayer" src=""></audio>
                             <div class="voice-play-frame">
                                 
                             </div>
@@ -188,29 +193,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="create-course-mask">
-            <div class="button-frame role-open role-selection code-create">
-                <button title="close-code" class="button-frame button-anime return-button">
-                    <i class="fa-solid fa-xmark"></i>
-                </button>
-                <span>課程代碼</span>
-                <div class="input-frame">
-                    <div>
-                        <div class="input-box">
-                            <label id="code">course name</label>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="register-button-frame">
-                            <button type="button" class="button-frame button-anime" id="code-copy" onclick="code_copy()">
-                                <div>COPY</div>
-                                <i class="fa-solid fa-check"></i>
-                            </button>     
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </div>
 </div>
 
